# demo-app

./: .gitignore  README.md  build.gradle  common.gradle  settings.gradle
animations/: build.gradle  readme.md
animations/src/androidTest/java/com/e/animations/: ExampleInstrumentedTest.java
animations/src/main/: AndroidManifest.xml
animations/src/main/java/com/e/animations/: AnimationController.kt  LinearLayoutSizeWrapper.kt
animations/src/main/java/com/ggg/animations/: AnimationController.kt  LinearLayoutSizeWrapper.kt
animations/src/main/res/anim/: anim_list_enter.xml  enter_anim.xml  exist_anim.xml  layout_animations.xml
animations/src/test/java/com/e/animations/: ExampleUnitTest.java
app/: build.gradle  learn.gradle
app/src/androidTest/java/com/e/myapplication/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/: js.rar
app/src/main/java/com/e/myapplication/: LoginActivity.kt  MainActivity.kt
app/src/main/java/com/ggg/myapplication/: DemoApplication.kt
app/src/main/res/layout/: activity_login.xml  activity_main.xml  activity_map.xml  item_music.xml
app/src/main/res/values/: strings.xml
buildSrc/: build.gradle.kts
buildSrc/src.main.java/: Dependencies.kt
buildSrc/src/main/kotlin/: Dependencies.kt
buildSrc/src/main/kotlin/com/ggg/plugins/: CheckImagePlugin.kt
cliprect/: build.gradle  readme.md
cliprect/src/androidTest/java/com/ggg/cliprect/: ExampleInstrumentedTest.kt
cliprect/src/main/: AndroidManifest.xml
cliprect/src/test/java/com/ggg/cliprect/: ExampleUnitTest.kt
custombinder/src/androidTest/java/com/ggg/custombinder/: ExampleInstrumentedTest.kt
custombinder/src/main/: AndroidManifest.xml
desinpattern/src/main/java/com/ggg/desinpattern/: MyClass.kt
desinpattern/src/uml/: AbstractFactory.puml  Builder.puml  Factory.puml  SimpleFactory.puml  Singleton.puml  StaticProxy.puml
gradle/wrapper/: gradle-wrapper.properties
jniutils/: CMakeLists.txt  build.gradle  ffmpeg_build.sh
jniutils/src/androidTest/java/com/ggg/jniutils/: ExampleInstrumentedTest.kt
jniutils/src/main/: AndroidManifest.xml
jniutils/src/main/cpp/: Tree.c  nativelib.cpp  thread_handler.cpp  thread_handler.h
jniutils/src/main/java/com/ggg/jniutils/activity/: JNIUtilActivity.kt
jniutils/src/main/java/com/ggg/jniutils/jni/: JNIUtils.kt  Person.kt
jniutils/src/main/res/layout/: activity_jni_utils.xml
jniutils/src/so/share/man/man1/: ffmpeg-all.1  ffmpeg-codecs.1  ffmpeg-filters.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffmpeg.1  ffprobe-all.1  ffprobe.1
jniutils/src/test/java/com/ggg/jniutils/: ExampleUnitTest.kt
leetcode/: readme.md
leetcode/src/main/java/com/ggg/leetcode/: CheckBrackets.java  CheckClosure.java  ClimbStairs.java  DailyTemperatures.java  DoubleArraySearch.java  GenerateParenthesis.java  IslandNum.java  MostWater.java  RebuildTree.java  (+5 more)
memoryobserver/: build.gradle  readme.md
memoryobserver/src/main/: AndroidManifest.xml
messenger/: build.gradle
messenger/src/main/: AndroidManifest.xml
messenger/src/main/res/layout/: activity_messenger_client.xml
morewindow/: build.gradle  readme.md
morewindow/src/main/: AndroidManifest.xml
morewindow/src/main/res/layout/: activity_more_window.xml  item_window.xml
morewindow/src/main/res/menu/: menu_tool.xml
morewindow/src/main/res/values/: strings.xml
plugins/: build.gradle
regionview/: build.gradle  readme.md
regionview/src/main/: AndroidManifest.xml
regionview/src/main/res/values/: strings.xml
remoteAIDL/src/main/: AndroidManifest.xml
remoteviews/: build.gradle  readme.md
remoteviews/src/main/: AndroidManifest.xml
remoteviews/src/main/res/drawable/: ic_paly_pause.xml
remoteviews/src/main/res/layout/: widget_player.xml
remoteviews/src/main/res/values/: strings.xml
remoteviews/src/main/res/xml/: appwidget_player_info.xml
renderscript/: build.gradle
renderscript/src/main/: AndroidManifest.xml
renderscript/src/main/res/layout/: activity_render_script_demo.xml  fragment_custom_sr.xml  fragment_dynamic_gaussian_blur.xml  fragment_gaussian_blur.xml
renderscript/src/main/rs/: test.rs
roundhead/: build.gradle  readme.md
roundhead/src/main/: AndroidManifest.xml
roundhead/src/main/res/drawable/: background_color_1.xml  background_color_2.xml  enter_background.xml  frame_photo.xml  input_background.xml
roundhead/src/main/res/values/: attrs.xml  strings.xml
sudoku/: build.gradle
sudoku/src/main/: AndroidManifest.xml
sudoku/src/main/res/drawable/: ic_sudoku.xml
sudoku/src/main/res/layout/: activity_sudoku.xml  item_table.xml
surfaceview/: build.gradle
surfaceview/src/main/: AndroidManifest.xml
surfaceview/src/main/res/drawable/: ic_baseline_fingerprint_24.xml
surfaceview/src/main/res/layout/: activity_audio.xml  activity_surface.xml
windowmanagers/: build.gradle  readme.md
windowmanagers/src/main/: AndroidManifest.xml
windowmanagers/src/main/res/values/: strings.xml
(+106 files in other folders)
